Fix classnames and margin spacings

--- a/src/App.scss
+++ b/src/App.scss
@@ -161,6 +161,11 @@ select {
   overflow-wrap: break-word;
   word-break: break-all;
   border-bottom: 1px dashed rgb(188, 188, 188);
+  // margin: 10px 0 10px 0;
+}
+
+.todo-item {
+  margin: 10px 0 10px 0;
 }
 
 .todo-item:hover {
